css/style.css
/* ... */
    #section1 .container .productList > li:hover {
        transform: translateY(-15px);
    }

    /* border radius 조절을 위한 영역 */
    #section1 .container .productList > li:first-child,
    #section1 .container .productList > li:nth-child(3) {
        border-radius: 20px 20px 0 0;
    }
    #section1 .container .productList > li:nth-child(2) {
        border-radius: 0px; border: 1px solid var(--maincolor1); border-left: none; border-right: none;
    }
    #section1 .container .productList > li:nth-child(4),
    #section1 .container .productList > li:last-child {
        border-radius: 20px;
    }
    #section1 .container .productList > li:nth-child(5) {
        border-radius: 0 0 20px 20px;
    }
    
    #section1 .container .productList li a {
        display: block;
        height: 100%; text-decoration: none; color: inherit;
    }
        #section1 .container .productList li a .productImg {
            position: relative;
            display: flex; justify-content: center; align-items: center;
            width: 100%; height: 280px; margin-top: 20px;
        }
        #section1 .container .productList li a .textBox {
            position: relative;
            height: auto; min-height: 100%; padding: 40px 2.6vw; background: #ffffff; transition: background 0.2s;
        }
            #section1 .container .productList li a .textBox strong {
                display: block;
                font-size: 2.2rem; font-weight: 700; color: var(--text); margin-bottom: 15px;
            }
            #section1 .container .productList li a .textBox strong::before {
                content: "";
                position: absolute; top: 25px; left: 2.6vw;
                width: 20px; height: 3px; background: var(--maincolor1);
            }
            #section1 .container .productList li a .textBox p {
                font-size: 1.6rem; line-height: 2; font-weight: 500; color: #333; margin-bottom: 20px;
            }
            #section1 .container .productList li a .textBox .productTag {
                display: flex; gap: 10px; justify-content: center;
            }
                #section1 .container .productList li a .textBox .productTag li {
                    width: 4.63vw; height: 100%; font-size: 1.5rem; font-weight: 600; color: var(--text); background: #EFEFEF; padding: 5px 0px; border-radius: 10px; transition: .3s; text-align: center;
                }

        /* 두 번째 li */
        #section1 .container .productList > li:nth-child(2) {
            display: flex; justify-content: space-between; align-items: center; flex-direction: column;
            background: #F8F8F8;
        }

        /* Hover 효과 */
        #section1 .container .productList > li:hover .textBox {
            background: var(--maincolor1);
        }
        #section1 .container .productList > li:hover .textBox strong {
            color: #ffffff;
        }
        #section1 .container .productList > li:hover .textBox p {
            color: #ffffff;
        }
        #section1 .container .productList li:hover a .textBox strong::before {
            background: #fff;
        }
        #section1 .container .productList li:hover a .textBox .productTag li {
            background: #fff;
        }


#section2 {
    
}
#section2 .container .h2bg_left,
#section2 .container .h2bg_right {
    top: 7px;
}
#section2 .container .btn_more {
    display: flex; justify-content: center; align-items: center;
    max-width: 182px; padding: 15px 0px; font-weight: 500; font-size: 2.4rem; background: var(--maincolor1); border-radius: 15px; color: #fff; margin: 0 auto; margin-top: 42px; transition: .2s;
}
#section2 .container .sec2_contentBox {
    display: grid; grid-template-columns: repeat(3, 25.4vw); gap: 20px; justify-content: center;
    margin: 30px auto 0;
}
    #section2 .container .sec2_contentBox .content_wrap {
        display: flex; justify-content: center; align-items: center;
        height: 600px; border-radius: 30px; transition: .2s;
    }
    #section2 .container .sec2_contentBox .content_wrap .tech {
        position: relative;
        width: 100%; height: 600px; border-radius: 30px; overflow: hidden; transition: .4s;
    }
    #section2 .container .sec2_contentBox .bottom {
        transform: translateY(130px);
    }
    #section2 .container .sec2_contentBox .tech::after {
        content: "";
        position: absolute; left: 50%; top: 50%; transform: translate(-50%,-50%);
        width: 289px; height: 146px; background: rgba(0, 0, 0, 0.5); filter: blur(68.5px);
    }
    #section2 .container .sec2_contentBox .tech:nth-child(2)::after {
        background: rgba(0, 0, 0, 0.2);
    }
    #section2 .container .sec2_contentBox .tech:last-child::after {
        width: 227px; height: 146px; background: rgba(0, 0, 0, 0.1);
    }
    #section2 .container .sec2_contentBox .tech span {
        position: absolute; z-index: 10; left: 50%; top: 50%; transform: translate(-50%,-50%);
        color: #fff; font-weight: 500; font-size: 2.6rem; white-space: nowrap; text-align: center; line-height: 160%;
    }
    #section2 .container .sec2_contentBox .tech img {
        width: 100%; height: 100%; object-fit: cover; transition: .4s ease-in-out;
    }

/* Hover 효과 */
#section2 .container .btn_more:hover {
    background-color: #13384f;
}
    #section2 .container .sec2_contentBox .content_wrap:hover .tech {
        border-radius: 50%;
        height: 25.4vw
    }
    #section2 .container .sec2_contentBox .content_wrap:hover .tech img {
        transform: scale(1.3); filter: brightness(70%)
    }
    #section2 .container .sec2_contentBox .content_wrap:hover .tech img.longWidth {
        transform: scale(1.6);
    }


#section3 {
    position: relative; margin-top: 350px;
}
#section3 h2 {}
#section3 h2 .tb {}
/* ... */

